Fixed bad alignment

--- a/common/common.scss
+++ b/common/common.scss
@@ -159,6 +159,15 @@ header.d-header.clearfix {
 	transition: all 0.1s ease-in
 }
 
+div.menu-panel.drop-down::before {
+  filter: blur(50px);
+}
+
+div.menu-panel.drop-down {
+	background: rgba(0, 0, 0, 0.9);
+  border-radius: 16px;
+}
+
 .d-header-wrap header>div.wrap {
 	width: 100%;
 	margin: auto;
@@ -356,17 +365,17 @@ nav.post-controls {
 
 .category-list .category,
 .category-list.with-topics .category {
-	border-radius: 8px;
-	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-	margin-top: 0rem;
-	overflow: hidden;
-	position: relative;
-	width: 100%;
-	display: grid;
-	grid-template-columns: repeat(1, 1fr);
-	grid-template-rows: auto 1fr;
-	grid-column-gap: 0px;
-	grid-row-gap: 0px
+	// border-radius: 2px;
+	// box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+	// margin-top: 0rem;
+	// overflow: hidden;
+	// position: relative;
+	// width: 100%;
+	// display: grid;
+	// grid-template-columns: repeat(1, 1fr);
+	// grid-template-rows: auto 1fr;
+	// grid-column-gap: 0px;
+	// grid-row-gap: 0px
 }
 
 .category-list.with-topics>thead tr th {
@@ -425,7 +434,7 @@ nav.post-controls {
 	padding-right: 1rem;
 	display: flex;
 	flex-direction: column;
-	z-index: 2;
+	z-index: 1;
 	position: relative
 }
 
@@ -445,7 +454,7 @@ nav.post-controls {
 	color: #888cb1;
 	font-size: 1rem;
 	margin: 0;
-	padding: 0
+	padding: 0;
 }
 
 .category-list .category .category-head .stats,
